ref(networking): created server class and started writing tests for it

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,6 +40,26 @@ target_link_libraries(${TEST_NETWORKINGTHREAD} PUBLIC
     juce::juce_audio_utils
 )
 
+set(TEST_SERVER "ServerTests")
+set(TESTS_SOURCES test_Server.cpp)
+set(TEST_INCLUDES "./")
+
+add_executable(${TEST_SERVER} ${TESTS_SOURCES})
+target_include_directories(${TEST_SERVER} PUBLIC ${TEST_INCLUDES})
+target_link_libraries(${TEST_SERVER} PUBLIC 
+    ${LIBRARY_NAME} 
+    Catch2::Catch2WithMain
+    "AudioBuffer"
+    "Server"
+    juce::juce_recommended_config_flags
+    juce::juce_recommended_lto_flags
+    juce::juce_recommended_warning_flags
+    PRIVATE
+    juce::juce_audio_utils
+)
+
 catch_discover_tests(${TEST_NETWORKINGTHREAD} OUTPUT_DIR "NetworkingThreadTests" OUTPUT_PREFIX "NetworkingThread_")
+
+catch_discover_tests(${TEST_SERVER} OUTPUT_DIR "ServerTests" OUTPUT_PREFIX "Server_")
 
 catch_discover_tests(${TEST_AUDIOBUFFER})
