test(providerThread): using tdd to implement providerThread & restructuring code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_subdirectory(audioBuffer)
-add_subdirectory(networking)
+add_subdirectory(host)
+add_subdirectory(provider)
+# add_subdirectory(networkThread)
