feat(consumerThread): added consumerThread and tests for it & started setting up code quality tools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,43 +1,58 @@
-
-# Mandatory line, sets the minimum version of CMake that should be used with this repository.
-# I specified 3.22 because I trust it. However, currently I have 3.26 installed on my machine.
-# To verify your version run
-# $ cmake --version
 cmake_minimum_required(VERSION 3.22)
 message(STATUS "Starting CMake configuration")
-# Sets a few variables, like PROJECT_NAME
-project(WolfSoundAudioPluginTemplate)
 
-# Always use the newest C++ standard on green-field projects if possible.
+project(CapstoneProject VERSION 0.1.0 LANGUAGES C CXX)
+
+
 set(CMAKE_CXX_STANDARD 23)
 if (APPLE)
     # On Mac, we need to wait for a new JUCE version that fixes the compilation issue
     set(CMAKE_CXX_STANDARD 20)
 endif()
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-# I like to download the dependencies to the same folder as the project.
-# If you want to install them system wide, set CPM_SOURCE_CACHE with the path to the dependencies
-# either as an environment variable or pass it to the cmake script with -DCPM_SOURCE_CACHE=<path>.
-# set(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs)
+option(ENABLE_TESTING "Enable building tests" ON)
+
+option(ENABLE_WARNINGS "Enable compiler warnings" ON)
+option(ENABLE_WARNINGS_AS_ERRORS "Enable compiler warnings as errors" OFF)
+
+option(ENABLE_SANITIZERS "Enable sanitizers" ON)
+
+option(ENABLE_LTO "Enable LTO/IPO" ON)
+
+
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 
 message(STATUS "Installing with VCPKG")
 include(    ${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake)
 find_package(juce 7.0.12 REQUIRED)
 find_package(Boost 1.83.0 REQUIRED COMPONENTS system coroutine context)
-find_package(catch2 3.5.4 REQUIRED)
-
-list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
 
 include_directories(${Boost_INCLUDE_DIRS})
 
 
 
-include(CTest)
-enable_testing()
+
 add_subdirectory(src)
 add_subdirectory(plugin)
-add_subdirectory(test)
 
+if (ENABLE_TESTING)
+    find_package(catch2 3.5.4 REQUIRED)
+    list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+    include(CTest)
+    enable_testing()
+    add_subdirectory(test)
+endif()
+
+if (ENABLE_SANITIZERS)
+    include(Sanitizer)
+    add_sanitizer_flags()
+endif()
+
+if (ENABLE_LTO)
+    include(LTO)
+endif()
 
 message(STATUS "Finished CMake configuration")
