--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(audioBuffer)
 add_subdirectory(host)
 add_subdirectory(provider)
-# add_subdirectory(networkThread)
+add_subdirectory(consumer)
