--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-
+add_subdirectory(integrationTests)
 include(Catch)
 
 
@@ -8,11 +8,11 @@ set(TEST_INCLUDES "./")
 
 add_executable(${TEST_AUDIOBUFFER} ${TESTS_SOURCES})
 target_include_directories(${TEST_AUDIOBUFFER} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_AUDIOBUFFER} PUBLIC 
-    ${LIBRARY_NAME} 
+target_link_libraries(${TEST_AUDIOBUFFER} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
-    
+
     juce::juce_recommended_config_flags
     juce::juce_recommended_lto_flags
     juce::juce_recommended_warning_flags
@@ -26,13 +26,13 @@ target_link_libraries(${TEST_AUDIOBUFFER} PUBLIC
 
 # add_executable(${TEST_NETWORK} ${TESTS_SOURCES})
 # target_include_directories(${TEST_NETWORK} PUBLIC ${TEST_INCLUDES})
-# target_link_libraries(${TEST_NETWORK} PUBLIC 
-#     ${LIBRARY_NAME} 
+# target_link_libraries(${TEST_NETWORK} PUBLIC
+#     ${LIBRARY_NAME}
 #     Catch2::Catch2WithMain
 #     "AudioBuffer"
 #     "Host"
 #     "NetworkThread"
-    
+
 
 #     juce::juce_recommended_config_flags
 #     juce::juce_recommended_lto_flags
@@ -47,8 +47,8 @@ set(TEST_INCLUDES "./")
 
 add_executable(${TEST_HOST} ${TESTS_SOURCES})
 target_include_directories(${TEST_HOST} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_HOST} PUBLIC 
-    ${LIBRARY_NAME} 
+target_link_libraries(${TEST_HOST} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
     "Host"
@@ -59,23 +59,7 @@ target_link_libraries(${TEST_HOST} PUBLIC
     juce::juce_audio_utils
 )
 
-set(TEST_INTEGRATIONS "IntegrationTests")
-set(TESTS_SOURCES test_Integration.cpp)
-set(TEST_INCLUDES "./")
 
-add_executable(${TEST_INTEGRATIONS} ${TESTS_SOURCES})
-target_include_directories(${TEST_INTEGRATIONS} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_INTEGRATIONS} PUBLIC 
-    ${LIBRARY_NAME} 
-    Catch2::Catch2WithMain
-    "AudioBuffer"
-    "Host"
-    juce::juce_recommended_config_flags
-    juce::juce_recommended_lto_flags
-    juce::juce_recommended_warning_flags
-    PRIVATE
-    juce::juce_audio_utils
-)
 
 set(TEST_PROVIDERTHREAD "ProviderThreadTests")
 set(TESTS_SOURCES test_ProviderThread.cpp)
@@ -83,8 +67,8 @@ set(TEST_INCLUDES "./")
 
 add_executable(${TEST_PROVIDERTHREAD} ${TESTS_SOURCES})
 target_include_directories(${TEST_PROVIDERTHREAD} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_PROVIDERTHREAD} PUBLIC 
-    ${LIBRARY_NAME} 
+target_link_libraries(${TEST_PROVIDERTHREAD} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
     "Host"
@@ -102,8 +86,8 @@ set(TEST_INCLUDES "./")
 
 add_executable(${TEST_CONSUMERTHREAD} ${TESTS_SOURCES})
 target_include_directories(${TEST_CONSUMERTHREAD} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_CONSUMERTHREAD} PUBLIC 
-    ${LIBRARY_NAME} 
+target_link_libraries(${TEST_CONSUMERTHREAD} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
     "Host"
@@ -115,14 +99,11 @@ target_link_libraries(${TEST_CONSUMERTHREAD} PUBLIC
     juce::juce_audio_utils
 )
 
-catch_discover_tests(${TEST_PROVIDERTHREAD} OUTPUT_DIR "ProviderThreadTests" OUTPUT_PREFIX "ProviderThread_")  
+catch_discover_tests(${TEST_PROVIDERTHREAD} PROPERTIES --repeat until-fail=10)
 
 catch_discover_tests(${TEST_CONSUMERTHREAD} OUTPUT_DIR "ConsumerThreadTests" OUTPUT_PREFIX "ConsumerThread_")
-
-# catch_discover_tests(${TEST_NETWORK} OUTPUT_DIR "NetworkThreadTests" OUTPUT_PREFIX "NetworkThread_")
-
-catch_discover_tests(${TEST_INTEGRATIONS} OUTPUT_DIR "IntegrationTests" OUTPUT_PREFIX "Integration_")
 
 catch_discover_tests(${TEST_HOST} OUTPUT_DIR "HostTests" OUTPUT_PREFIX "Host_")
 
 catch_discover_tests(${TEST_AUDIOBUFFER})
+
