feat(connectionManagerThread): implementing rough idea, stuck at passing callback to async recieve function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(audioBuffer)
 add_subdirectory(host)
 add_subdirectory(provider)
 add_subdirectory(consumer)
+add_subdirectory(connectionManager)
