--- a/src/connectionManager/CMakeLists.txt
+++ b/src/connectionManager/CMakeLists.txt
@@ -16,4 +16,7 @@ target_link_libraries("${LIBRARY_NAME}"
         juce::juce_recommended_lto_flags
         juce::juce_recommended_warning_flags
         "AudioBuffer"
+        "Host"
+        "ConsumerThread"
+        "ProviderThread"
 )
