feat(provider, consumer & connectionManager): added basic connection functionalities for provider, consumer & connectionManager. (#2)
* test(providerThread): using tdd to implement providerThread & restructuring code

* feat(consumerThread): added consumerThread and tests for it & started setting up code quality tools

* fix(provider consumer host): fixed bugs and wrote some tests

* feat(connectionManagerThread): implementing rough idea, stuck at passing callback to async recieve function

* feat(contentManagerThread): tests for constructor, setupHost, asyncWaitForConnection. Next finish validate connection and other methods of the class

* problem(unknown): cant make tests pass -> there is a bigger problem in my code

* test(cmt): resolved what I though to be a bigger underlying problem but it was just a stupid bug which mad the tests not pass

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_subdirectory(audioBuffer)
-add_subdirectory(networking)
+add_subdirectory(host)
+add_subdirectory(provider)
+add_subdirectory(consumer)
+add_subdirectory(connectionManager)
