--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-
+add_subdirectory(integrationTests)
 include(Catch)
 
 
@@ -8,12 +8,11 @@ set(TEST_INCLUDES "./")
 
 add_executable(${TEST_AUDIOBUFFER} ${TESTS_SOURCES})
 target_include_directories(${TEST_AUDIOBUFFER} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_AUDIOBUFFER} PUBLIC 
-    ${LIBRARY_NAME} 
+target_link_libraries(${TEST_AUDIOBUFFER} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
-    "NetworkingThread"
-    
+
     juce::juce_recommended_config_flags
     juce::juce_recommended_lto_flags
     juce::juce_recommended_warning_flags
@@ -21,18 +20,38 @@ target_link_libraries(${TEST_AUDIOBUFFER} PUBLIC
     juce::juce_audio_utils
 )
 
-set(TEST_NETWORKINGTHREAD "NetworkingThreadTests")
-set(TESTS_SOURCES test_NetworkingThread.cpp)
+# set(TEST_NETWORK "NetworkThreadTests")
+# set(TESTS_SOURCES test_NetworkThread.cpp)
+# set(TEST_INCLUDES "./")
+
+# add_executable(${TEST_NETWORK} ${TESTS_SOURCES})
+# target_include_directories(${TEST_NETWORK} PUBLIC ${TEST_INCLUDES})
+# target_link_libraries(${TEST_NETWORK} PUBLIC
+#     ${LIBRARY_NAME}
+#     Catch2::Catch2WithMain
+#     "AudioBuffer"
+#     "Host"
+#     "NetworkThread"
+
+
+#     juce::juce_recommended_config_flags
+#     juce::juce_recommended_lto_flags
+#     juce::juce_recommended_warning_flags
+#     PRIVATE
+#     juce::juce_audio_utils
+# )
+
+set(TEST_HOST "HostTests")
+set(TESTS_SOURCES test_Host.cpp)
 set(TEST_INCLUDES "./")
 
-add_executable(${TEST_NETWORKINGTHREAD} ${TESTS_SOURCES})
-target_include_directories(${TEST_NETWORKINGTHREAD} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_NETWORKINGTHREAD} PUBLIC 
-    ${LIBRARY_NAME} 
+add_executable(${TEST_HOST} ${TESTS_SOURCES})
+target_include_directories(${TEST_HOST} PUBLIC ${TEST_INCLUDES})
+target_link_libraries(${TEST_HOST} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
-    "NetworkingThread"
-    
+    "Host"
     juce::juce_recommended_config_flags
     juce::juce_recommended_lto_flags
     juce::juce_recommended_warning_flags
@@ -40,17 +59,20 @@ target_link_libraries(${TEST_NETWORKINGTHREAD} PUBLIC
     juce::juce_audio_utils
 )
 
-set(TEST_SERVER "ServerTests")
-set(TESTS_SOURCES test_Server.cpp)
+
+
+set(TEST_PROVIDERTHREAD "ProviderThreadTests")
+set(TESTS_SOURCES test_ProviderThread.cpp)
 set(TEST_INCLUDES "./")
 
-add_executable(${TEST_SERVER} ${TESTS_SOURCES})
-target_include_directories(${TEST_SERVER} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_SERVER} PUBLIC 
-    ${LIBRARY_NAME} 
+add_executable(${TEST_PROVIDERTHREAD} ${TESTS_SOURCES})
+target_include_directories(${TEST_PROVIDERTHREAD} PUBLIC ${TEST_INCLUDES})
+target_link_libraries(${TEST_PROVIDERTHREAD} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
-    "Server"
+    "Host"
+    "ProviderThread"
     juce::juce_recommended_config_flags
     juce::juce_recommended_lto_flags
     juce::juce_recommended_warning_flags
@@ -58,17 +80,18 @@ target_link_libraries(${TEST_SERVER} PUBLIC
     juce::juce_audio_utils
 )
 
-set(TEST_INTEGRATIONS "IntegrationTests")
-set(TESTS_SOURCES test_Integration.cpp)
+set(TEST_CONSUMERTHREAD "ConsumerThreadTests")
+set(TESTS_SOURCES test_ConsumerThread.cpp)
 set(TEST_INCLUDES "./")
 
-add_executable(${TEST_INTEGRATIONS} ${TESTS_SOURCES})
-target_include_directories(${TEST_INTEGRATIONS} PUBLIC ${TEST_INCLUDES})
-target_link_libraries(${TEST_INTEGRATIONS} PUBLIC 
-    ${LIBRARY_NAME} 
+add_executable(${TEST_CONSUMERTHREAD} ${TESTS_SOURCES})
+target_include_directories(${TEST_CONSUMERTHREAD} PUBLIC ${TEST_INCLUDES})
+target_link_libraries(${TEST_CONSUMERTHREAD} PUBLIC
+    ${LIBRARY_NAME}
     Catch2::Catch2WithMain
     "AudioBuffer"
-    "Server"
+    "Host"
+    "ConsumerThread"
     juce::juce_recommended_config_flags
     juce::juce_recommended_lto_flags
     juce::juce_recommended_warning_flags
@@ -76,10 +99,31 @@ target_link_libraries(${TEST_INTEGRATIONS} PUBLIC
     juce::juce_audio_utils
 )
 
-catch_discover_tests(${TEST_NETWORKINGTHREAD} OUTPUT_DIR "NetworkingThreadTests" OUTPUT_PREFIX "NetworkingThread_")
+set(TEST_CONNCETIONMANAGERTHREAD "ConnectionManagerThreadTests")
+set(TESTS_SOURCES test_ConnectionManagerThread.cpp)
+set(TEST_INCLUDES "./")
 
-catch_discover_tests(${TEST_INTEGRATIONS} OUTPUT_DIR "IntegrationTests" OUTPUT_PREFIX "Integration_")
+add_executable(${TEST_CONNCETIONMANAGERTHREAD} ${TESTS_SOURCES})
+target_include_directories(${TEST_CONNCETIONMANAGERTHREAD} PUBLIC ${TEST_INCLUDES})
+target_link_libraries(${TEST_CONNCETIONMANAGERTHREAD} PUBLIC
+    ${LIBRARY_NAME}
+    Catch2::Catch2WithMain
+    "AudioBuffer"
+    "Host"
+    "ConnectionManagerThread"
+    juce::juce_recommended_config_flags
+    juce::juce_recommended_lto_flags
+    juce::juce_recommended_warning_flags
+    PRIVATE
+    juce::juce_audio_utils
+)
+catch_discover_tests(${TEST_CONNCETIONMANAGERTHREAD} OUTPUT_DIR "ConnectionManagerThreadTests" OUTPUT_PREFIX "ConnectionManagerThread_")
 
-catch_discover_tests(${TEST_SERVER} OUTPUT_DIR "ServerTests" OUTPUT_PREFIX "Server_")
+catch_discover_tests(${TEST_PROVIDERTHREAD} )
+
+catch_discover_tests(${TEST_CONSUMERTHREAD} OUTPUT_DIR "ConsumerThreadTests" OUTPUT_PREFIX "ConsumerThread_")
+
+catch_discover_tests(${TEST_HOST} OUTPUT_DIR "HostTests" OUTPUT_PREFIX "Host_")
 
 catch_discover_tests(${TEST_AUDIOBUFFER})
+
