feat(tcp host & protobuf): created tcp host for save communication of configuration data of provider and consumer threads. Added protobuf making future changes to what needs to be send easier

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(host)
 add_subdirectory(provider)
 add_subdirectory(consumer)
 add_subdirectory(connectionManager)
+add_subdirectory(tcpHost)
