--- a/src/tcpHost/CMakeLists.txt
+++ b/src/tcpHost/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(LIBRARY_NAME "ConnectionManagerThread")
+set(LIBRARY_NAME "TcpHost")
 
 set(LIBRARY_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${LIBRARY_NAME}.cpp")
 set(LIBRARY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/${LIBRARY_NAME}.h")
@@ -7,17 +7,17 @@ set(LIBRARY_INCLUDES "./" "${CMAKE_BINARY_DIR}/configured_files/include")
 
 
 add_library("${LIBRARY_NAME}" "${LIBRARY_SOURCES}" "${LIBRARY_HEADERS}")
-target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}")
+target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}" "${GENERATED_PROTO_DIR}" "${Protobuf_INCLUDE_DIRS}")
+message(STATUS "Protobuf_INCLUDE_DIRS: ${Protobuf_INCLUDE_DIRS}")
 target_link_libraries("${LIBRARY_NAME}"
     PRIVATE
         juce::juce_audio_utils
+
     PUBLIC
         juce::juce_recommended_config_flags
         juce::juce_recommended_lto_flags
         juce::juce_recommended_warning_flags
         "AudioBuffer"
         "Host"
-        "TcpHost"
-        "ConsumerThread"
-        "ProviderThread"
-)
+        "protobufGenerated"
+        )
