--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,5 @@ add_subdirectory(audioBuffer)
 add_subdirectory(host)
 add_subdirectory(provider)
 add_subdirectory(consumer)
-add_subdirectory(connectionManager)
+# add_subdirectory(connectionManager)
 add_subdirectory(tcpHost)
