--- a/src/host/CMakeLists.txt
+++ b/src/host/CMakeLists.txt
@@ -16,4 +16,5 @@ target_link_libraries("${LIBRARY_NAME}"
         juce::juce_recommended_lto_flags
         juce::juce_recommended_warning_flags
         "AudioBuffer"
+        "protobufGenerated"
 )
