feat(cmt, editor & processor): raw bone of communication of edito to cmt through processor, with the help of MessageListener

--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -52,6 +52,7 @@ target_link_libraries(${PROJECT_NAME}
         juce::juce_recommended_lto_flags
         juce::juce_recommended_warning_flags
         "AudioBuffer"
+        "ConnectionManagerThread"
 )
 
 # These definitions are recommended by JUCE.
