--- a/src/tcpHost/CMakeLists.txt
+++ b/src/tcpHost/CMakeLists.txt
@@ -7,16 +7,16 @@ set(LIBRARY_INCLUDES "./" "${CMAKE_BINARY_DIR}/configured_files/include")
 
 
 add_library("${LIBRARY_NAME}" "${LIBRARY_SOURCES}" "${LIBRARY_HEADERS}")
-target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}" "${GENERATED_PROTO_DIR}" "${Protobuf_INCLUDE_DIRS}")
+target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}")
 message(STATUS "Protobuf_INCLUDE_DIRS: ${Protobuf_INCLUDE_DIRS}")
 target_link_libraries("${LIBRARY_NAME}"
     PRIVATE
-        juce::juce_audio_utils
+        # juce::juce_audio_utils
 
     PUBLIC
-        juce::juce_recommended_config_flags
-        juce::juce_recommended_lto_flags
-        juce::juce_recommended_warning_flags
+        # juce::juce_recommended_config_flags
+        # juce::juce_recommended_lto_flags
+        # juce::juce_recommended_warning_flags
         "AudioBuffer"
         "Host"
         "protobufGenerated"
