--- a/test/helpers/CMakeLists.txt
+++ b/test/helpers/CMakeLists.txt
@@ -8,8 +8,7 @@ set(LIBRARY_INCLUDES "./" "${CMAKE_BINARY_DIR}/configured_files/include")
 
 
 add_library("${LIBRARY_NAME}" "${LIBRARY_SOURCES}" "${LIBRARY_HEADERS}")
-target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}" "${GENERATED_PROTO_DIR}" "${Protobuf_INCLUDE_DIRS}")
-message(STATUS "Protobuf_INCLUDE_DIRS: ${Protobuf_INCLUDE_DIRS}")
+target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}" "${GENERATED_PROTO_DIR}")
 target_link_libraries("${LIBRARY_NAME}"
     PUBLIC
         "protobufGenerated"
